FinalRelease/backend/ansible/kubernetes/configs/ingress/cloudhomework-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudhomework-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - api.fourstring.dev
      secretName: cloudhomework-tls
  rules:
    - host: api.fourstring.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudhomework-backend-service
                port:
                  number: 80
