FinalRelease/backend/ansible/kubernetes/configs/ingress/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demoservice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - demo.fourstring.dev
      secretName: cloudhomework-tls
  rules:
  - host: demo.fourstring.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-nginx-service
            port:
              number: 80
